--- a/game.html
+++ b/game.html
@@ -18,24 +18,9 @@
 
 <script src="mainloop.js"></script>
 <script src="util2d.js"></script>
+<script src="game.js"></script>
 <script>
 'use strict'
-
-var Game = function(canvas) {
-    this.canvas = canvas;
-    this.ctx = this.canvas.getContext('2d');
-    this.time = 0;
-};
-
-Game.prototype.render = function() {
-    this.ctx.fillStyle = cssUtil.rgbString([0, 0, (Math.sin(this.time) * 0.5 + 0.5) * 255]);
-    this.ctx.fillRect(0, 0, this.canvas.width, this.canvas.height);
-    return this.ctx;
-};
-
-Game.prototype.update = function(deltaTime) {
-    this.time += deltaTime;
-};
 
 var start = function() {
     var resizer = new CanvasResizer({});
