Fix use strict typo

--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
 <script src="util2d.js"></script>
 <script src="game.js"></script>
 <script>
-'use strict'
+'use strict';
 
 var start = function() {
     var resizer = new CanvasResizer({});
