More stuff on map

--- a/game.html
+++ b/game.html
@@ -18,6 +18,7 @@
 
 <script src="mainloop.js"></script>
 <script src="util2d.js"></script>
+<script src="map.js"></script>
 <script src="game.js"></script>
 <script>
 'use strict';
