--- a/game.html
+++ b/game.html
@@ -18,6 +18,7 @@
 
 <script src="mainloop.js"></script>
 <script src="util2d.js"></script>
+<script src="canvasui.js"></script>
 
 <!-- game specific -->
 <script src="unit.js"></script>
@@ -26,8 +27,10 @@
 <script>
 'use strict';
 
+var resizer;
+
 var start = function() {
-    var resizer = new CanvasResizer({
+    resizer = new CanvasResizer({
         mode: CanvasResizer.Mode.FIXED_RESOLUTION_INTERPOLATED,
         width: 1920,
         height: 1080
