--- a/game.html
+++ b/game.html
@@ -23,6 +23,7 @@
 <!-- game specific -->
 <script src="unit.js"></script>
 <script src="location.js"></script>
+<script src="faction.js"></script>
 <script src="game.js"></script>
 <script>
 'use strict';
