--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
 <script src="canvasui.js"></script>
 
 <!-- game specific -->
+<script src="utils.js"></script>
 <script src="unit.js"></script>
 <script src="location.js"></script>
 <script src="faction.js"></script>
