--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
 <script src="mainloop.js"></script>
 <script src="util2d.js"></script>
 <script src="canvasui.js"></script>
+<script src="sidebar.js"></script>
 
 <!-- game specific -->
 <script src="unit.js"></script>
