Hook up chalkboard font

--- a/game.html
+++ b/game.html
@@ -4,6 +4,17 @@
 <title>Codename X</title>
 <meta charset="UTF-8">
 <style>
+@font-face {
+    font-family: 'eraserregular';
+    src: url('assets/fonts/EraserRegular-webfont.eot');
+    src: url('assets/fonts/EraserRegular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('assets/fonts/EraserRegular-webfont.woff') format('woff'),
+         url('assets/fonts/EraserRegular-webfont.ttf') format('truetype'),
+         url('assets/fonts/EraserRegular-webfont.svg#eraserregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 #canvasWrapper {
     position: relative;
 }
@@ -19,7 +30,7 @@
     padding-top: 100px;
     transform-origin: top right;
     
-    font: 20px sans-serif;
+    font: 22px eraserregular;
     font-variant: small-caps;
 }
 
