Move faction definition Side.Sides into factionid.js.

--- a/game.html
+++ b/game.html
@@ -63,6 +63,7 @@
 
 <!-- game specific -->
 <script src="utils.js"></script>
+<script src="factionid.js"></script>
 <script src="unit.js"></script>
 <script src="location.js"></script>
 <script src="faction.js"></script>
