Fix nullrefs in project viewer.

--- a/debug/projects.html
+++ b/debug/projects.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="../factionid.js"></script>
     <script src="../unit.js"></script>
     <script src="projects.js"></script>
 </head>
