Some formatting on research proposals

--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
     font-weight: bold;
 }
 
+.researchProposal .unitAttribute {
+    margin: 0.25em 0;
+    margin-left: 1em;
+}
+
+.researchProposal .unitAttribute.good {
+    color: #004;
+}
+
+.researchProposal .unitAttribute.bad {
+    color: #400;
+}
+
 .researchProposal .researchTime {
     font-weight: bold;
 }
