Add hover effect to research proposals

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     width: 380px;
     height: 545px;
     padding: 20px;
-    margin-top: 110px;
+    top: 110px;
 
     font: 20px special_eliteregular;
     color: #000;
@@ -100,6 +100,12 @@
 .researchProposal.hilight {
     box-shadow: inset 0px 0px 30px 0px rgba(255,235,153,1);
 }
+
+.researchProposal:hover {
+    border: 2px solid #fff;
+    margin: -2px;
+}
+
 </style>
 <!-- output -->
 <script src="sprite.js"></script>
