Research UI clarification

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
 }
 
+body {
+    font-family: special_eliteregular, sans-serif;
+}
+
 #canvasWrapper {
     position: relative;
 }
@@ -60,7 +64,13 @@
     position: absolute;
     left: 0;
     top: 0;
+    width: 1440px;
     transform-origin: top left;
+}
+
+#researchWrap h1 {
+    text-align: center;
+    color: #fff;
 }
 
 .researchProposal {
@@ -69,14 +79,14 @@
     padding: 20px;
     top: 110px;
 
-    font: 20px special_eliteregular;
+    font-size: 20px;
     color: #000;
     background: url('assets/gfx/research_proposal.png');
 }
 
 .researchProposal .codename {
     text-transform: uppercase;
-    font: 20px special_eliteregular;
+    font-size: 20px;
     font-weight: bold;
 }
 
