Start turn button

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@ body {
     background: url('assets/gfx/research_proposal.png');
 }
 
+.researchProposal h2 {
+    margin-top: 0;
+}
+
 .researchProposal .codename {
     text-transform: uppercase;
     font-size: 20px;
