Space out the UI

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ var canvasWrapper;
 var DEV_MODE = true;
 
 var start = function() {
-    var DEBUG_MAIN_LOOP = DEV_MODE && false;
+    var DEBUG_MAIN_LOOP = DEV_MODE && true;
     Audio.muteAll = DEV_MODE && true;
 
     var canvas = document.createElement('canvas');
