Basic version of black icons on research proposals

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@ body {
     margin: -2px;
 }
 
+.researchProposal .icon {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+}
+
 </style>
 <!-- output -->
 <script src="sprite.js"></script>
