Add audio mute button

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ var DEV_MODE = true;
 
 var start = function() {
     var DEBUG_MAIN_LOOP = DEV_MODE && true;
-    Audio.muteAll = DEV_MODE && false;
+    Audio.muteAll(DEV_MODE && false);
 
     var canvas = document.createElement('canvas');
     canvasWrapper = document.createElement('div');
