Add Wikipedia links to projects

--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@ body {
     color: #f88;
 }
 
+#sidebar a {
+    display: block;
+    margin-top: 3em;
+    color: #ddd;
+    text-decoration: none;
+}
+
+#sidebar a:hover {
+    color: #fff;
+}
+
 #researchWrap {
     position: absolute;
     left: 0;
