Disable dev mode

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ body {
 var resizer;
 var canvasWrapper;
 
-var DEV_MODE = true;
+var DEV_MODE = false;
 
 var start = function() {
     var DEBUG_MAIN_LOOP = DEV_MODE && true;
