--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@ body {
 
 <script src="mainloop.js"></script>
 <script src="util2d.js"></script>
+<script src="utiljs.js"></script>
 <script src="canvasui.js"></script>
 
 <!-- game specific -->
 <script src="sidebar.js"></script>
 <script src="researchproposal.js"></script>
-<script src="utils.js"></script>
 <script src="factionid.js"></script>
 <script src="unit.js"></script>
 <script src="location.js"></script>
