Add color fallback for background image

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ body {
 
     font-size: 20px;
     color: #000;
-    background: url('assets/gfx/research_proposal.png');
+    background-image: url('assets/gfx/research_proposal.png');
+    background-color: #8d8380;
 }
 
 .researchProposal h2 {
