--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ body {
 var resizer;
 var canvasWrapper;
 
-var DEV_MODE = false;
+var DEV_MODE = (window.location.href.indexOf("?devMode") != -1);
 
 var start = function() {
     var DEBUG_MAIN_LOOP = DEV_MODE && true;
